--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
         <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
         
 	
-        <?php $this->load->view('header') ?>
+        <aside id="colorlib-aside" role="complementary" class="js-fullheight text-center">
+            <h1 id="colorlib-logo"><a href="index.html"><span class="img" style="background-image: url(assets/images/jay.png);"></span>Jay</a></h1>
+            <nav id="colorlib-main-menu" role="navigation">
+                <ul>
+                    <li class="colorlib-active"><a href="index.html">Home</a></li>
+                    <li><a href="summary.html">Summary</a></li>
+                </ul>
+            </nav>
+        </aside>
 
 
 		<div id="colorlib-main">
@@ -66,7 +74,34 @@
 				</div>
 			</section>
     
-          <?php $this->load->view('footer') ?>
+            <footer class="ftco-footer ftco-bg-dark ftco-section">
+				<div class="container px-md-5">
+				<div class="row mb-5">
+					<div class="col-md">
+					<div class="ftco-footer-widget mb-4 ml-md-4">
+			
+					</div>
+					</div>
+					<div class="col-md">
+						<div class="ftco-footer-widget mb-4">
+			
+					</div>
+					</div>
+					<div class="col-md">
+					<div class="ftco-footer-widget mb-4">
+						<h2 class="ftco-heading-2">Contact Me</h2>
+						<div class="block-23 mb-3">
+							<ul>
+							<li><span class="icon icon-map-marker"></span><span class="text">Jl. Duri XIII, Bengkalis, Riau, Indonesia</span></li>
+							<li><a href="#"><span class="icon icon-phone"></span><span class="text">+62 821 7442 3450</span></a></li>
+							<li><a href="#"><span class="icon icon-envelope"></span><span class="text">jaywindypanggabean@gmail.com</span></a></li>
+							</ul>
+						</div>
+					</div>
+					</div>
+				</div>
+				</div>
+			</footer>
 
 		</div><!-- END COLORLIB-MAIN -->
 	</div><!-- END COLORLIB-PAGE -->
